Resolved test errors and failures

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -39,5 +39,6 @@ en:
   successfully_created: "%{entity} was successfully created!"
   successfully_updated: "%{entity} was successfully updated!"
   task:
+    not_found: "Couldn't find Task"
     slug:
       immutable: "is immutable!"
